# cpp_3_sem_project

./: CMakeLists.txt  mnist_loader.py  plot_metrics.py
include/: exception.hpp  network.hpp  trainer.hpp
include/layers/: convolutional_layer.hpp  elu_layer.hpp  flatten_layer.hpp  fully_connected_layer.hpp  layer.hpp  leaky_relu_layer.hpp  pooling_layer.hpp  softmax_layer.hpp
include/utils/: cross_validation.hpp  dataset.hpp  logger.hpp  matrix.hpp  metrics.hpp
src/: main.cpp  network.cpp  trainer.cpp
src/layers/: convolutional_layer.cpp  elu_layer.cpp  fully_connected_layer.cpp  leaky_relu_layer.cpp  softmax_layer.cpp
src/utils/: logger.cpp
